Updated formatting and fixed card block issue where image was too big

--- a/src/common/components/CardBlock/index.css
+++ b/src/common/components/CardBlock/index.css
@@ -1,21 +1,22 @@
 .card-block {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 15px;
-  background-color: #373c47;
-  border-radius: 10px;
-  width: 265px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px;
+    background-color: #373c47;
+    border-radius: 10px;
+    width: 265px;
 }
 
 img {
-  min-height: 370px;
+    min-height: 370px;
+    max-height: 370px;
 }
 
 h5 {
-  margin: 10px 0;
+    margin: 10px 0;
 }
 
 p {
-  margin: 5px 0;
+    margin: 5px 0;
 }
